<resources>
    <string name="app_name">twentyonesounds</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_library">Library</string>
    <string name="profile">Icon Profile</string>
    <string name="notification">Notification</string>
    <string name="chip_songs">Songs</string>
    <string name="chip_podcasts">Podcasts</string>
    <string name="place_holder_your_name">Your name</string>
    <string name="place_holder_your_id">Your ID</string>
    <string name="place_holder_your_email">Your email</string>
    <string name="btn_save">Save</string>
    <string name="internet_error_message">Unable to access the internet</string>
    <string name="btn_try_again">Try again</string>
    <string name="album_row_pop_list">Pop List</string>
    <string name="album_row_rock_list">Rock List</string>
    <string name="album_row_reggae_list">Reggae List</string>
    <string name="album_row_electronic_list">Electronic List</string>
    <string name="good_morning_message">Good Morning ☀️</string>
    <string name="good_afternoon_message">Good Afternoon 🌇</string>
    <string name="good_night_message">Good Night 🌙</string>
    <string name="hello_message">Hello,</string>
    <string name="loved_albums_title">Loved albums</string>
    <string name="all_albums_title">All albums</string>
    <string name="loved_songs_title">Loved songs</string>
    <string name="all_songs_title">All songs</string>
    <string name="song_singular_title">Song</string>
    <string name="song_plural_title">Songs</string>
    <string name="album_singular_title">Album</string>
    <string name="album_plural_title">Albums</string>
    <string name="initial_text_search">Search by name of any song or artist</string>
    <string name="without_text_search">Without result</string>
    <string name="like_tittle">Likes</string>
    <string name="new_song_message">New Song</string>
    <string name="new_episode_message">New Episode</string>
    <string name="no_songs_yet_desc">No song yet</string>
    <string name="no_album_yet_desc">No album yet</string>
</resources>