<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.hyper.twentyonesounds.utils.custom.LittleButtonView
        android:id="@+id/btn_notification_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_larger"
        android:layout_marginTop="@dimen/gap_larger"
        app:cardBackgroundColor="@color/background"
        app:cardElevation="0dp"
        app:iconLittleButton="@drawable/ic_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_larger"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/notification"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_title"
        app:layout_constraintBottom_toBottomOf="@id/btn_notification_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_notification_return"
        app:layout_constraintTop_toTopOf="@id/btn_notification_return" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/gap_larger"
        android:layout_marginTop="@dimen/gap_larger"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_notification_return"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_songs"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_songs" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_podcasts"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_podcasts" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_musics_and_podcasts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/gap_larger"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="124dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>