<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.hyper.twentyonesounds.utils.custom.TopBarComponent
        android:id="@+id/tb_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:iconAction="@drawable/ic_notifications"
        app:iconTopBar="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pageName="@string/menu_search" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpt_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/gap_larger"
        android:layout_marginTop="@dimen/gap_larger"
        android:gravity="center"
        android:hint="@string/menu_search"
        android:textColorHint="@color/gray_medium"
        app:boxBackgroundColor="@color/background_light"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_search"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/white">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/gap_larger"
        android:layout_marginTop="@dimen/gap_larger"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="128dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inpt_search"
        tools:listitem="@layout/item_home_song_in_list" />

    <TextView
        android:id="@+id/tv_without_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/without_text_search"
        android:textColor="@color/gray_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_initial_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/initial_text_search"
        android:textColor="@color/gray_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>